Bug 1195788 - Set arithmetic composite clamp to true for D2D filter node. r=bas